idea of introduction made

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,76 @@
+/* base styles */
+
 body {
+    background-image: url();
+    font-family: 'Quicksand', sans-serif;
+    margin: 0;
+}
+
+header {
+    background-color: cadetblue;
+    margin: 100px 100px;
+    width: 80%;
+    margin:0 auto;
+}
+
+nav a {
+    text-align: center;
+    margin-top: 50px;
+    text-decoration: none;
+    color: black;
+    font-size: 1.5625rem;
+    padding: 10px;
+    text-transform: uppercase;
+}
+
+li {
+    display: list-item;
+    color: black;
+    padding: 20px;
+
 
 }
 
-
-.personal_details {
-  margin: 40px;
-  padding: 10px;
-  text-align: center;
+nav ul {
+    margin: 0;
+    padding: 30px 0;
+    list-style-type: none;
+    float: right;
 }
+
+a:hover {
+    color: palevioletred;
+}
+
+a:active {
+    color: lightslategray;
+}
+
+img {
+    width: 100px;
+    height: auto;
+    padding: 10px 10px;
+}
+
+h1 {
+    font-family: 'News Cycle';
+    color: lightslategray;
+
+    /* line-height: 90px; */
+    margin: 50px 20px;
+    /* top and bottom, second value is right and left */
+}
+
+/*
+
+        <nav>
+                <img src="images/up.png" alt="portrait-me">
+            <ul>
+                <li>
+                    <a href="#">Personal Details</a>
+                    <a href="#">Foll Sec.</a>
+                    <a href="#">Foll Sec.</a>
+                    <a href="#">Foll Sec.</a>
+                </li>
+            </ul>
+        </nav> */
