--- a/css/styles2.css
+++ b/css/styles2.css
@@ -1,3 +1,4 @@
+/* BASE STYLES */
 html {
   height: 100%;
   overflow: hidden;
@@ -5,7 +6,7 @@ html {
 
 body {
   background-color: #555;
-  color: white;
+  color: #7A7265;
   outline-color: black;
   margin: 0;
   padding: 0;
@@ -14,7 +15,7 @@ body {
   height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
-  font-family: "Luna";
+  font-family: 'Century Gothic', sans-serif;
 }
 
 header {
@@ -26,9 +27,10 @@ header {
   width: 100vw;
 }
 
-header h1 {
+/* HEADER OPENING */
+/* header h1 {
     margin-top: -100px;
-}
+} */
 
 header. header:before {
   background: 50% 50% / cover:
@@ -42,12 +44,12 @@ header::before {
   right: 0;
   top: 0;
   display: block;
-  background-image: url(../images/bg1.jpg);
-  background-size: cover;
+  background-image: url(../images/bg1.png);
+  background-size: cover ;
   transform-origin: center center 0;
   transform: translateZ(-2px) scale(2.8);
   z-index: -1;
-  min-height: 100vh;
+  min-height: 10vh;
 }
 
 header * {
@@ -57,3 +59,39 @@ header * {
   margin: 0;
   padding: 1em 0;
 }
+
+/* navbar */
+nav {
+  overflow: hidden;
+  background-color: #262927b3;
+  border: 1px;
+  border-radius: 50%;
+  padding: 50%
+  height: 0.6em;
+  width: 160px;
+  float: right;
+  vertical-align: top;
+
+}
+
+aside {
+  align-self: flex-start;
+  position: sticky;
+}
+
+li a {
+  text-decoration: none;
+  text-align: center;
+  color: white;
+  list-style: circle;
+  text-transform: uppercase
+}
+
+.intro {
+  margin-top: 0;
+  padding: 20px;
+  margin-top: 80px;
+  height: 180px;
+  width: auto;
+  background-color: #5559;
+  width: 80%;
