--- a/css/styles.css
+++ b/css/styles.css
@@ -1,76 +1,47 @@
-/* base styles */
+html {
+    
+}
 
 body {
-    background-image: url();
-    font-family: 'Quicksand', sans-serif;
     margin: 0;
+    font-family: 'Archivo Narrow', sans-serif;
+    color: #B0B5B3;
+    background-color: #989788;
 }
 
-header {
-    background-color: cadetblue;
-    margin: 100px 100px;
-    width: 80%;
-    margin:0 auto;
+.header-container {
+    
 }
 
-nav a {
-    text-align: center;
-    margin-top: 50px;
-    text-decoration: none;
-    color: black;
-    font-size: 1.5625rem;
-    padding: 10px;
-    text-transform: uppercase;
+.site-header {
+    background-color: #5D576B; 
+    padding: 1em;
+    margin: 0 4em 0 4em;
+    
 }
 
-li {
-    display: list-item;
-    color: black;
-    padding: 20px;
-
-
-}
-
-nav ul {
-    margin: 0;
-    padding: 30px 0;
-    list-style-type: none;
-    float: right;
-}
-
-a:hover {
-    color: palevioletred;
-}
-
-a:active {
-    color: lightslategray;
+.title {
+    font-size: 3rem;
+    float: left;
 }
 
 img {
-    width: 100px;
+    width: 80px;
     height: auto;
-    padding: 10px 10px;
+    padding: 10px;
+    float: left;
 }
 
 h1 {
-    font-family: 'News Cycle';
-    color: lightslategray;
-
-    /* line-height: 90px; */
-    margin: 50px 20px;
-    /* top and bottom, second value is right and left */
+    float: left;
 }
 
-/*
+nav {
+    margin: 0;
+    padding: 30px 0;
+    list-style-type: none;
+    display: inline-block;
+    float: right;
+}
 
-        <nav>
-                <img src="images/up.png" alt="portrait-me">
-            <ul>
-                <li>
-                    <a href="#">Personal Details</a>
-                    <a href="#">Foll Sec.</a>
-                    <a href="#">Foll Sec.</a>
-                    <a href="#">Foll Sec.</a>
-                </li>
-            </ul>
-        </nav> */
+
