--- a/css/styles3.css
+++ b/css/styles3.css
@@ -3,6 +3,8 @@ html {
 }
 
 body {
+
+    line-height: 1.6em
     margin: 0;
     background-color: #8D99AE;
     font-family: 'Poppins', sans-serif;
@@ -10,14 +12,26 @@ body {
 }
 
 .site-header {
-    height: 500px;
+    height: 200px;
     margin: 0;
-    background-color: rgba(0, 0, 0, 0.089);
+    background-color: #32425ed4;
     overflow: hidden;
-    padding: 90px 10px;
-    background-image: url(../images/jpg);
-    background-repeat: no-repeat;
-    background-position: top;
+    padding: 60px 10px;
+}
+
+.body-parallax {
+
+  /* The image used */
+  background-image: url(../images/splash3.jpg);
+
+  /* Full height */
+  height: 100%;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .title {
@@ -35,6 +49,7 @@ nav {
     margin: 0
     overflow: hidden;
 }
+
 ul li {
     text-decoration: none;
     margin-left: 38%;
@@ -42,7 +57,7 @@ ul li {
 }
 
 
-a {
+li a {
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
@@ -54,33 +69,48 @@ a {
     border-radius: 1em;
 }
 
-a:hover {
+li a:hover {
     background-color: #FE5F55;
     color: #B0B5B3;
     transition: 1s;
 }
 
-a:active {
+li a:active {
     background-color: #32425E;
     color: #DECBB7;
     transition: 0.8s
 }
 
-.about-me {
-  margin: auto;
-  padding: auto;
+.container-about {
+  background-color: #61988E;
+  color: #DECBB7;
+  margin:60px 10px ;
+  /* 50px 1px 0 1px */
+  padding: 2em 6em;
+  height: 500px;
+
+
 }
 
+.about-me {
+  margin: 10em;
+  background-color: #7DAAA2;
+  text-align: center;
+  border: 3px #7DAAA2;
+  border-radius: 1em;
+
+}
 
 /* CV CONTENT */
 
 #personal-details {
     background-color: #32425E;
     color: #DECBB7;
-    margin: 50px 1px 0 1px;
+    margin:60px 10px ;
+    /* 50px 1px 0 1px */
     padding: 2em;
-    border: #5D576B solid 3px;
-    border-radius: 1em;
+
+    border-radius:
 }
 
 
@@ -89,4 +119,11 @@ a:active {
 
 /* FOOTER  */
 
-background-color: rgba(0, 0, 0, 0.089)
+.site-footer {
+    background-color: #32425ed4;
+    height: 60px;
+}
+
+#instagram:hover {
+    background-image: url(../images/gram-color.png);
+}
