--- a/css/styles3.css
+++ b/css/styles3.css
@@ -1,5 +1,7 @@
 html {
-
+    scroll-behavior: smooth;
+    transition: 0.1s;
+    color: #DECBB7;
 }
 
 body {
@@ -17,6 +19,10 @@ body {
     background-color: #32425ed4;
     overflow: hidden;
     padding: 60px 10px;
+    background-image: url(../images/header-bg.svg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-blend-mode: lighten;
 }
 
 .body-parallax {
@@ -41,12 +47,11 @@ body {
     margin: 0;
     padding: 1.5em 0;
     letter-spacing: 1.35rem;
-
 }
 
 nav {
     display: contents;
-    margin: 0
+    margin: 0;
     overflow: hidden;
 }
 
@@ -77,44 +82,66 @@ li a:hover {
 
 li a:active {
     background-color: #32425E;
-    color: #DECBB7;
     transition: 0.8s
 }
 
+/* CV CONTENT */
+/* ABOUT ME SECTION */
 .container-about {
-
     background-color: #61988E;
-    color: #DECBB7;
-    margin:40px 30px 0 30px ;
+    margin:50px 30px 0 30px ;
     /* 50px 1px 0 1px */
     padding: 2em 6em;
-    height: 500px;
+    height: 0 auto;
 }
 
 .about-me {
     margin: 2em;
     background-color: #7DAAA2;
     text-align: center;
-    border: 3px #7DAAA2;
+    border: 2px #7DAAA2;
+    border-radius: 2em;
+    transition: 0.2s ease-out;
+}
+
+.about-me:hover {
+    margin: 4em 2em ;
+    text-align: center;
+    border: 2px #77ddaa;
     border-radius: 1em;
+    box-shadow: #3b6e55;
 }
 
 #custom-text {
     padding: 2em;
 }
 
-/* CV CONTENT */
-
-#personal-details {
-    background-color: #32425E;
-    color: #DECBB7;
-    margin:60px 10px ;
-    /* 50px 1px 0 1px */
-    padding: 2em;
-
-    border-radius:
+#custom-text:hover {
+    padding: 4em;
+    transition: 0.2s ease-in-out;
+    font-size: 2em;
+    line-height: 1.6em;
 }
 
+/* PERSONAL DETAILS SECTION */
+
+
+.container-personal {
+    background-color: #32425E;
+    color: #DECBB7;
+    margin:50px 30px 0 30px ;
+    /* 50px 1px 0 1px */
+    padding: 2em 6em;
+    height: 0 auto;
+}
+
+.personal-details {
+    margin: 2em;
+    background-color: #57647B;
+    text-align: center;
+    border: 2px #7DAAA2;
+    border-radius: 2em;
+    transition: 0.2s ease-out;
 
 
 
