--- a/css/styles3.css
+++ b/css/styles3.css
@@ -28,7 +28,7 @@ body {
 .body-parallax {
 
   /* The image used */
-    background-image: url(../images/grey-min.jpg);
+    background-image: url(../images/grey-min-max.jpg);
     /* Full height */
     height: 100%;
 
