--- a/css/styles.css
+++ b/css/styles.css
@@ -109,9 +109,9 @@ li a:active {
 }
 
 #skills-logo:hover {
-  padding: 2.3em;
+
   transition: 0.2s ease-in-out;
-  font-size: 1.2em;
+
 }
 
 
@@ -165,15 +165,7 @@ img {
   color: blue;
 }
 
-/* .html-logo-png,
-.css-logo-png,
-.js-logo-png, {
-  width: 0;
-  margin: 0;
-  background-color: pink ;
-  box-sizing: content-box;
-  box-shadow: 15px;
-} */
+
 .html-logo-png,
 .css-logo-png,
 .js-logo-png,
@@ -185,13 +177,10 @@ img {
   padding: 2%;
   border-radius: 0.4em;
   background: #f3f3f3;
+  margin-bottom: 1em;
+
 }
 
-
-.sass-logo-png img:hover {
-    height: 10em;
-    width: 10em;
-    
     transition: smooth 1s
 }
 
